# SimpleRustFtpClientServer

./: .gitignore  Cargo.toml  INF26207_TP02_H2023_Simon.docx  README.md
src/: main.rs
src/client/: client.rs
src/core/: core.rs
src/server/: server.rs
src/tcp/: mod.rs  packet.rs  tcp.rs
src/udp/: udp.rs
