[package]
name = "ftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
bitflags = "2.0.2"
colored = "2.0.0"
socket2 = "0.5.1"
serde = { version = "1.0.159", features = ["derive"] }
bincode = "1.3.3"
serde_with = "2.3.2"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"